599b5f2e6856c5635d20797fa6c81265c6636159 Fix: Third element in condition row could have a slightly different size than the other elements Dev fix: Dark mode wasn't having an effect on the dropdowns
Sync to source repo @599b5f2e6856c5635d20797fa6c81265c6636159

--- a/css/searchBuilder.jqueryui.css
+++ b/css/searchBuilder.jqueryui.css
@@ -79,7 +79,7 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria input.dtsb-input {
   margin-right: 0.8em;
   min-width: 5em;
   max-width: 20em;
-  background-color: rgba(200, 200, 200, 0.3);
+  background-color: #eeeeee;
   color: inherit;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-dropDown option.dtsb-notItalic,
@@ -98,6 +98,11 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria div.dtsb-inputCont span.
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria div.dtsb-inputCont input.dtsb-value {
   width: 33%;
+}
+div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria div.dtsb-inputCont select,
+div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria div.dtsb-inputCont input {
+  height: 100%;
+  box-sizing: border-box;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria div.dtsb-buttonContainer {
   margin-left: auto;
